# pkg/apis/v1alpha1/api/oas_response_encoders_gen.go
@@ -86,6 +86,20 @@ func encodeGetApplicationsResponse(response []Application, w http.ResponseWriter
 	return nil
 }
 
+func encodeGetCSRFTokenResponse(response *CSRFTokenResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetHealthLivenessResponse(response *HealthCheckStatus, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
